# MotorProject

./: CMakeLists.txt  readme.md
Drivers/: CMakeLists.txt
Drivers/CMSIS/Core/Include/: cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  mpu_armv7.h  tz_context.h
Inc/: beep.h  common.h  delay.h  led.h  main.h  mytype.h  stm32f4xx_conf.h  stm32f4xx_it.h  sys.h
Src/: beep.c  delay.c  led.c  main.cpp  stm32f4xx_it.c  sys.c  system_stm32f4xx.c
cmake/: toolchain-arm-none-eabi.cmake
uCOSII/: CMakeLists.txt
uCOSII/Include/: include-ucosii.h  os.h  os_cfg.h  ucos_ii.h
uCOSII/Ports/ARM-Cortex-M4/Generic/GNU/: os_cpu.h  os_cpu_a.s  os_cpu_c.c
